--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "backmeupplz <backmeupplz@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "yarn build-ts && node dist/app.js",
+    "distribute": "yarn build-ts && node dist/app.js",
     "develop": "tsc-watch --skipLibCheck --onSuccess 'node dist/app.js'",
     "build-ts": "tsc --skipLibCheck",
     "pretty": "prettier --check src",
