--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "dist/app.js",
   "license": "MIT",
   "scripts": {
-    "distribute": "yarn build-ts && node dist/app.js",
+    "start": "yarn build && node dist/app.js",
     "develop": "tsc-watch --skipLibCheck --onSuccess 'node dist/app.js'",
-    "build-ts": "tsc --skipLibCheck",
+    "build": "tsc --skipLibCheck",
     "pretty": "prettier --check src",
     "lint": "yarn pretty && eslint --max-warnings 0 --ext ts,tsx,json src"
   },
