--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "envalid": "^7.2.2",
     "grammy": "^1.5.0",
     "grammy-middlewares": "^1.0.11",
-    "mongoose": "^6.1.0"
+    "mongoose": "^6.1.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@typegoose/typegoose": "^9.3.1",
     "@types/js-yaml": "^4.0.5",
-    "@types/node": "^16.11.12",
+    "@types/node": "^22.13.4",
     "@types/node-fetch": "^2.6.11",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
@@ -40,7 +41,7 @@
     "prettier": "^2.5.1",
     "source-map-support": "^0.5.21",
     "tsc-watch": "^4.5.0",
-    "typescript": "^4.5.2"
+    "typescript": "^5.7.3"
   },
   "_moduleAliases": {
     "@": "dist"
